# bmstu-iu7-cg-cp

./: CMakeLists.txt  Makefile  README.md  main.cpp
docs/: Фрактальные поверхности.pptx
docs/report/: 00-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  main.tex
docs/report/inc/csv/: time.csv
docs/report/inc/lst/: Fractal.cpp  Lightning.cpp  build.sh
src/: Makefile  main.cpp
src/bounders/sphere/: Sphere.h
src/camera/: Camera.cpp  Camera.h
src/drawer/: Drawer.cpp  Drawer.h
src/drawer/qt/: QtDrawer.cpp  QtDrawer.h
src/engine/: Engine.cpp  Engine.h
src/engine/qt/: QtEngine.cpp
src/fractals/: Fractal.cpp  Fractal.h
src/fractals/julia/: Julia.cpp  Julia.h
src/fractals/mandelbulb/: Mandelbulb.cpp  Mandelbulb.h  MandelbulbParametrized.cpp  MandelbulbParametrized.h
src/light/: Light.cpp  Light.h
src/math/: Ellipse3D.h  Vec3D.h  Vector.h
src/solution/: Solution.h
src/src/bounders/: Bounder.h
src/src/bounders/aabb/: AABB.cpp  AABB.h
src/src/bounders/sphere/: Sphere.cpp
src/src/camera/: CameraSolution.h
src/src/drawer/: Drawer.cpp  Drawer.h  DrawerSolution.h
src/src/drawer/qt/: QtDrawer.cpp
src/src/engine/qt/: QtEngine.cpp  QtEngine.h
src/src/fractals/: Fractal.cpp  FractalSolution.h
src/src/fractals/julia/: Julia.h
src/src/light/: LightSolution.h
src/src/material/: Material.cpp  Material.h
src/src/math/: Matrix.h
src/ui/qt/: design.ui  mainwindow.cpp
ui/qt/: design.h  design.ui  mainwindow.cpp  mainwindow.h
ui/qt/widgets/: ColorPicker.cpp  ColorPicker.h
(+3 files in other folders)
